# httpdirectory

./: .gitignore  .justfile  Cargo.toml  ChangeLog  README.md  deny.toml  httpdirectory.sbom.spdx.json  mirror.list  release.toml  rustfmt.toml  typos.toml
benches/: filtering_bench.rs  integration_bench.rs
examples/: debug_me.rs  mirrors.rs  onedir.rs
examples/common/: mod.rs
src/: detect.rs  entry.rs  error.rs  h5ai.rs  httpdirectory.rs  httpdirectoryentry.rs  lib.rs  requests.rs  scrape.rs  stats.rs  ul.rs
src/scrapers/: h5ai.rs  miniserve.rs  mod.rs  snt.rs  stil.rs  ul.rs
tests/: integration.rs
tests/common/: h5ai.rs  miniserve.rs  mod.rs  pre.rs  snt.rs  stil.rs  table.rs  traffic_manager.rs  ul.rs
