[package]
name = "httpdirectory"
version = "0.17.2"
edition = "2024"
authors = ["Olivier Delhomme <olivier.delhomme@free.fr>"]
description = "Library to get a directory webpage (an HTTP index) into a Rust structure"
repository = "https://github.com/dupgit/httpdirectory"
license = "MIT OR Apache-2.0"
keywords = ["http", "directory", "file", "autoindex", "httpdir"]
categories = ["web-programming", "parsing"]
rust-version = "1.88"

[dependencies]
chrono = "0.4.40"
colored = { version = "3.0.0" }
const_format = "0.2.34"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["charset"] }
scraper = "0.25.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
hotpath = { version = "0.9.0", optional = true }
unwrap_unreachable = "0.1.1"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
test-output = []
test-helpers = []

[dev-dependencies]
httpmock = "0.8.1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "filtering_bench"
harness = false

[[bench]]
name = "integration_bench"
harness = false

[lints.clippy]
pedantic = "warn"
